--- a/index.html
+++ b/index.html
@@ -89,16 +89,29 @@
 
     <h3>Checkboxes</h3>
     <div>
-        <input id="checkbox-1" class="checkbox-custom" name="checkbox-1" type="checkbox" checked>
-        <label for="checkbox-1" class="checkbox-custom-label">First Choice</label>
+        <input id="checkbox-11" class="checkbox-custom" name="checkbox-11" type="checkbox" checked>
+        <label for="checkbox-11" class="checkbox-custom-label">First Choice</label>
     </div>
     <div>
-        <input id="checkbox-2" class="checkbox-custom" name="checkbox-2" type="checkbox">
-        <label for="checkbox-2" class="checkbox-custom-label">Second Choice</label>
+        <input id="checkbox-21" class="checkbox-custom" name="checkbox-21" type="checkbox">
+        <label for="checkbox-21" class="checkbox-custom-label">Second Choice</label>
     </div>
     <div>
-        <input id="checkbox-3" class="checkbox-custom" name="checkbox-3" type="checkbox">
-        <label for="checkbox-3" class="checkbox-custom-label">Third Choice</label>
+        <input id="checkbox-31" class="checkbox-custom" name="checkbox-31" type="checkbox">
+        <label for="checkbox-31" class="checkbox-custom-label">Third Choice</label>
+    </div>
+    </div>
+    <div>
+        <input id="checkbox-113" class="checkbox-custom" name="checkbox-13" type="checkbox" checked>
+        <label for="checkbox-113" class="checkbox-custom-label">First Choice</label>
+    </div>
+    <div>
+        <input id="checkbox-213" class="checkbox-custom" name="checkbox-213" type="checkbox">
+        <label for="checkbox-213" class="checkbox-custom-label">Second Choice</label>
+    </div>
+    <div>
+        <input id="checkbox-313" class="checkbox-custom" name="checkbox-313" type="checkbox">
+        <label for="checkbox-313" class="checkbox-custom-label">Third Choice</label>
     </div>
     </div>
 </form>
